# AndroidNative

./: .gitignore  README.md  build.gradle  gradle.properties
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: config.json5
app/src/main/cpp_demo/: CMakeLists.txt  main.cpp  mainOld.cpp  main_register.cpp  nativeGlobals.h
app/src/main/cpp_demo/base/: ThreadBase.cpp  ThreadBase.h  WorkerThread.cpp  WorkerThread.h
app/src/main/cpp_demo/config/: ConfigManager.cpp  ConfigManager.h
app/src/main/cpp_demo/old/: Android.mk
app/src/main/cpp_demo/otherlibs/json/json_utils/: JsonUtil.cpp  JsonUtil.h
app/src/main/cpp_demo/otherlibs/json/nlohmann/: README.md
app/src/main/cpp_demo/otherlibs/json/utils/: JsonUtil.cpp  JsonUtil.h
app/src/main/cpp_demo/otherlibs/jsoncpp/: json_writer.cpp
app/src/main/cpp_demo/test/: CurlTest.cpp  MyHandle.cpp  MyHandle.h  OpensslTest.h  ThreadTest.cpp  ThreadTest.h
app/src/main/cpp_demo/test_curl/: CurlTest.cpp
app/src/main/cpp_demo/utils/: CurlHttp.h  Util.cpp  Util.h
app/src/main/cpp_demo/utils_android/: ContextUtil.cpp  ContextUtil.h  JniInterface.cpp  JniInterface.h  JniUtil.cpp  JniUtil.h  LogUtil.h
app/src/main/cpp_demo/utils_openssl/: AesUtil.cpp  AesUtil.h  Base64Util.h  HashUtil.cpp
app/src/main/java/com/hqumath/nativedemo/: MainActivity.java  MainActivity.kt
app/src/main/java/com/hqumath/nativedemo/app/: AppExecutors.java
app/src/main/java/com/hqumath/nativedemo/base/: BaseActivity.kt
app/src/main/java/com/hqumath/nativedemo/utils/: ByteUtil.java  CommonUtil.java  FileUtil.java  LogUtil.java  SignatureUtil.java  StringUtil.java
app/src/main/java/org/freedesktop/demo/: Demo.java  Demo.kt
app/src/main/java/org/freedesktop/test/: Test.java
app/src/main/jni_demo/: CMakeLists.txt  main.cpp  main1.cpp  main_register.cpp
app/src/main/jni_demo/cpp_test/: test1.cpp  test1.h
app/src/main/jni_demo/old/: Application.mk  test1.c  test2.cpp  test3.c
app/src/main/jni_demo/otherlibs/jsoncpp/: JsonUtil.cpp  JsonUtil.h  README.md  json_reader.cpp  json_value.cpp
app/src/main/jni_demo/test/: OpensslTest.cpp  OpensslTest.h  ThreadTest.cpp  ThreadTest.h
app/src/main/jni_demo/test_curl/: CurlTest.cpp  CurlTest.h
app/src/main/jni_demo/test_type/: TypeTest.cpp  TypeTest.h
app/src/main/jni_demo/utils/: CurlHttp.cpp  JniUtil.cpp  JniUtil.h  Util.cpp  Util.h  UtilOld.cpp  UtilOld.h
app/src/main/jni_demo/utils_android/: ContextUtil.cpp  JniUtil.h  LogUtil.h
app/src/main/jni_demo/utils_openssl/: AesUtil.cpp  AesUtil.h  Base64Util.cpp  HashUtil.h  ShaUtil.cpp  ShaUtil.h  my_aes.cpp  my_aes.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
